@startuml

title __DAP-PRACTICA05's Class Diagram__\n

  namespace practica5 {
    class practica5.GreenBlinkingTrafficState {
    }
  }
  

  namespace practica5 {
    class practica5.GreenTrafficState {
    }
  }
  

  namespace practica5 {
    class practica5.Main {
    }
  }
  

  namespace practica5 {
    class practica5.RedTrafficState {
    }
  }
  

  namespace practica5 {
    class practica5.TrafficLight {
    }
  }
  

  namespace practica5 {
    abstract class practica5.TrafficState {
    }
  }
  

  namespace practica5 {
    class practica5.YellowTrafficState {
    }
  }
  

  practica5.GreenBlinkingTrafficState -up-|> practica5.TrafficState
  practica5.GreenTrafficState -up-|> practica5.TrafficState
  practica5.Main -up-|> javax.swing.JFrame
  practica5.RedTrafficState -up-|> practica5.TrafficState
  practica5.TrafficLight o-- practica5.TrafficState : state
  practica5.TrafficState o-- practica5.TrafficLight : trafficLight
  practica5.YellowTrafficState -up-|> practica5.TrafficState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
